Add: strings.xml 한글 리소스 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="enterKeywords">검색어를 입력해 주세요.</string>
     <string name="noKeywords">검색 결과가 없습니다.</string>
     <string name="keywordsClear">검색어 초기화 버튼</string>
+    <string name="ivKeywordCancle">keywordCancle</string>
+    <string name="keyword">keyword</string>
+    <string name="locationmarker">locationMarker</string>
+    <string name="place_name">place name</string>
+    <string name="place_address">place address</string>
+    <string name="category">category</string>
 </resources>
