--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Map</string>
+    <string name="search_hint">검색어를 입력해 주세요.</string>
+    <string name="main_text">검색 결과가 없습니다.</string>
 </resources>
