refactor : 지난주차 과제 코드 복사

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Map</string>
+    <string name="search">검색어를 입력하세요.</string>
+    <string name="searchButton">검색</string>
+    <string name="noSearch">검색 결과가 없습니다</string>
+    <string name="x">X</string>
 </resources>
