--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Map</string>
+    <string name="no_result_msg">검색 결과가 없습니다.</string>
+    <string name="please_enter">검색어를 입력해 주세요.</string>
+    <string name="clear">삭제</string>
 </resources>
