--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Map</string>
+    <string name="QUERY_HINT">검색어를 입력해주세요.</string>
+    <string name="EMPTY_TEXT">검색 결과가 없습니다.</string>
 </resources>
