--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Map</string>
+    <string name="hint_search">검색어를 입력해 주세요.</string>
+    <string name="no_results">검색 결과가 없습니다.</string>
+    <string name="item_already_selected">이미 선택된 목록입니다.</string>
 </resources>
