init: 2주차 과제 코드 복사

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Map</string>
+    <string name="search_hint">검색어를 입력해 주세요.</string>
+    <string name="cancelBtn">cancelBtn</string>
+    <string name="search_empty">검색 결과가 없습니다.</string>
+    <string name="placeName">이름</string>
+    <string name="placeAddress">장소</string>
+    <string name="placeCategory">카테고리</string>
+    <string name="saveplace">장소</string>
+    <string name="deleteSavePlace">검색기록삭제</string>
 </resources>
